--- a/Projects/index.html
+++ b/Projects/index.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <link rel ="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
 
+    <meta charset="UTF-8">
+
+    <title>Ahmad</title>
+
+</head>
+
+<body>
+<h1> Hello Everyone : )</h1>
+<header>
+    <menu>
+
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../about.html">About</a></li>
+        <li><a href="../Projects/index.html"> Projects</a></li>
+        <li><a href="../Projects/project1.html">Project</a></li>
+        <li><a href="../Projects/project2.html">Project</a></li>
+
+    </menu>
+    <p>Hello i am Ahmad</p>
+</header>
 </body>
+
 </html>
