--- a/Projects/project1.html
+++ b/Projects/project1.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+
 <header>
     <menu>
 
@@ -20,7 +21,7 @@
         <li><a href="../Projects/project2.html">Project2</a></li>
 
     </menu>
-    <p>I will be presenting two of my favorite projects.</p>
+    <p> This is project 1.</p>
 </header>
 </body>
 
