--- a/Projects/project2.html
+++ b/Projects/project2.html
@@ -10,17 +10,18 @@
 </head>
 
 <body>
+
 <header>
     <menu>
 
         <li><a href="../index.html">Home</a></li>
         <li><a href="../about.html">About</a></li>
         <li><a href="../Projects/index.html"> Projects</a></li>
-        <li><a href="../Projects/project1.html">Project1</a></li>
-        <li><a href="../Projects/project2.html">Project2</a></li>
+        <li><a href="../Projects/project1.html">Project</a></li>
+        <li><a href="../Projects/project2.html">Project</a></li>
 
     </menu>
-    <p>I will be presenting two of my favorite projects.</p>
+    <p> This is project 2.</p>
 </header>
 </body>
 
