--- a/about.html
+++ b/about.html
@@ -10,18 +10,18 @@
 </head>
 
 <body>
-<h1> Hello Everyone : )</h1>
+
 <header>
     <menu>
 
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="Projects/index.html"> Projects</a></li>
-        <li><a href="Projects/project1.html">Project</a></li>
-        <li><a href="Projects/project2.html">Project</a></li>
+        <li><a href="Projects/project1.html">Project1</a></li>
+        <li><a href="Projects/project2.html">Project2</a></li>
 
     </menu>
-    <p>Hello i am Ahmad</p>
+    <p>Today you will view some of my projects.</p>
 </header>
 </body>
 
