--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="Projects/index.html"> Projects</a></li>
-        <li><a href="Projects/project1.html">Project</a></li>
-        <li><a href="Projects/project2.html">Project</a></li>
+        <li><a href="Projects/project1.html">Project1</a></li>
+        <li><a href="Projects/project2.html">Project2</a></li>
 
     </menu>
     <p>Hello i am Ahmad</p>
