--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="Projects/project2.html">Project2</a></li>
 
     </menu>
-    <p>Hello i am Ahmad</p>
+    <p> I am Ahmad</p>
 </header>
 </body>
 
